@@ -1,3 +1,8 @@
+2003-05-03  Malcolm Tredinnick <malcolm@commsecure.com.au>
+	
+	* autogen.sh: Make this portable to Bourne-like shells. Fixes
+	the problems pointed out by Morten Welinder in bug #110177.
+
 2003-04-10  Ross Burton  <ross@burtonini.com>
 
 	* autogen.sh: Fix a typo in the glib-gettext checks.
